# Projeto-de-Processamento-de-Sianis-2026-1-UFC

./: .gitignore
Arquivos de Exemplo/: Novo(a) Documento de Texto.txt  main_ADC_V2.c  main_FFT2_Filtro.c  main_Teste_DSP.c
Projeto/: Grafico.py  README.md  graf.py
Projeto/Documentos_e_imagens/: geladeira_estagio_3
Projeto/Node_Red/: flows.json
Projeto/main/: CMakeLists.txt  current_monitor.c  current_monitor.h  main.c  mqtt_bridge.c  mqtt_bridge.h  wifi_manager.c
